retrieveUnpackaged/objects/Bank__c.object
<CustomObject>
    <fields>
        <fullName>IFSCCode__c</fullName>
        <label>IFSC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MICRCode__c</fullName>
        <label>MICR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>